# RAGentic

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  DOCKER.md  Dockerfile  README.MD  README.md  api_server.py  chainlit.md  chainlit_app.py  mcp_server.py  pyproject.toml  web_app.py
.chainlit/: config.toml
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx
frontend/src/app/chat/: page.tsx
frontend/src/components/chat/: ChatContainer.tsx  ChatInput.tsx  (+2 more)
public/: stylesheet.css
skills/: code_review.md  summarize.md  translate.md
src/a2a/: __init__.py  qa_agent.py  qa_agent_executor.py
src/agent/: __init__.py  memory.py  tools.py
src/config/: config_bak.py
src/configs/: __init__.py  config.py  database_config.py  evaluate_config.py  logger_config.py  memory_config.py  memory_settings.py  model_config.py  prompt_config.py  retrieve_config.py  thirdpart_config.py  tool_config.py
src/cores/: __init__.py  bounded_memory_saver.py  message_builder.py  milvus_db.py  pipeline.py  pipeline_langgraph.py  pipline_langgraph.py  qa_agent.py  qa_agent_executor.py  query_transformer.py
src/data_process/: processor.py
src/data_process/loaders/: __init__.py  document_loader.py
src/data_process/processors/: text_processor.py
src/db_services/: __init__.py  base.py  factory.py
src/db_services/milvus/: __init__.py  collection.py  collection_manager.py  connection.py  connection_manager.py  data.py  data_service.py  database_manager.py  record_utils.py  retrieval.py  store.py
src/evaluate/: __init__.py  evaluate.py  rag.py
src/mcp/: __init__.py  mcp_client.py
src/mcp/server/: __init__.py  kb_tools.py  weather.py  web_crawl.py
src/memory/: __init__.py  base.py  conversation_manager.py  hybrid_memory_service.py  long_term_memory.py  mem0_manager.py  memory_adapter.py  short_term_memory.py
src/models/: embedding.py  llm.py  llm_litellm.py  llm_response_cache.py  message_adapter.py  response_utils.py
src/skills/: skill_manager.py
src/utils/: __init__.py  langfuse_dataset.py  prompt.py  security.py  utils.py
templates/: user_prompt.j2
tests/: __main__.py  a2a_client_test.py  test_api_server.py  test_embedding.py  test_langfuse.py  test_memory.py  test_memory_leak_fixes.py  test_message_builder.py  test_milvus_record_utils.py  test_models_llm.py  test_pipeline_graph.py  test_pipeline_langgraph.py  test_pipeline_nodes.py  test_pipline_langgraph.py  test_query_transformer.py  test_rag.py  test_rag_evaluate.py  test_security.py
tests/db_test/: __init__.py  milvus_test.py
(+2 files in other folders)
