[project]
name = "rag"
version = "0.1.0"
description = "RAGentic - Enterprise RAG-based Intelligent Q&A System"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Redis & Memory
    "redisvl>=0.8.0,<0.9.0",
    "mem0ai>=0.1.0,<0.2.0",
    # 核心 LLM 框架
    "langchain>=0.3.0,<0.4.0",
    "langchain-core>=0.3.0,<0.4.0",
    "langchain-community>=0.3.0,<0.4.0",
    "langchain-openai>=0.2.0,<0.3.0",
    "langchain-mcp-adapters>=0.1.0,<0.2.0",
    "langgraph>=0.2.0,<0.3.0",
    # OpenAI & API
    "openai>=1.50.0,<2.0.0",
    "langfuse>=2.50.0,<3.0.0",
    # MCP 相关
    "fastmcp>=0.1.0,<0.2.0",
    "mcp==1.14.1",
    "a2a-sdk>=0.2.0a1",
    # 向量数据库 & 嵌入
    "pymilvus[milvus-lite,model]>=2.4.0,<3.0.0",
    "sentence-transformers>=3.0.0,<4.0.0",
    # 基础工具
    "numpy>=1.24.0,<3.0.0",
    "tiktoken>=0.7.0,<0.8.0",
    "lxml>=5.0.0,<6.0.0",
    # 评估指标
    "ragas>=0.2.0,<0.3.0",
    "rouge>=1.0.0,<2.0.0",
    "bert-score>=0.3.0,<0.4.0",
    "jieba>=0.42.1,<0.43.0",
    "nltk>=3.9.0,<4.0.0",
    # Web 界面
    "gradio>=5.0.0,<6.0.0",
    "chainlit>=2.10.0,<3.0.0",
    # API Server
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    # 安全
    "cryptography>=42.0.0,<43.0.0",
    "slowapi>=0.1.9,<0.2.0",
    "anthropic>=0.86.0",
    "litellm>=1.0.0,<2.0.0",
]
[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "ruff>=0.4.0,<1.0.0",
]

[[tool.uv.index]]
url = "http://mirrors.aliyun.com/pypi/simple"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.26.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
